# anchoring

./: .gitignore  README.md  anchoring.code-workspace  docker-compose.yml  package-lock.json  package.json  purgecss.config.js  start.bat  start.sh  tsconfig.json
.cursor/: mcp.json  settings.json
desktop/: .env.example  .gitignore  .repomix-output.txt  CLAUDE.md  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
desktop/src/: App.css  App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  build.rs  diesel.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  pinecone.rs
desktop/src-tauri/src/db/: mod.rs  models.rs  pgvector.rs
desktop/src-tauri/src/mcp/: mod.rs
desktop/src-tauri/src/services/: browser.rs  crawler.rs  documentation.rs  documentation_url_service.rs  events.rs  intelligence.rs  mod.rs  proxies.rs  technology_service.rs  version_service.rs
desktop/src/components/app-header/: dialog-close-button.tsx  index.tsx  settings-dialog.tsx  task-queue.tsx  theme-toggle.tsx  titlebar.tsx
desktop/src/components/crawler/: AiProcessing.tsx  CrawlerForm.tsx  DocumentationSnippet.tsx  KnowledgeBase.tsx  ProcessingOptions.tsx  ProcessingPipeline.tsx  SnippetViewer.tsx  TechDetailsForm.tsx  URLDetailModal.tsx  URLList.tsx  UrlInput.tsx
desktop/src/docs/: structured-output.md  vector-db.md
desktop/src/hooks/: use-mobile.ts  useKnowledgeBase.ts  useProcessedUrls.ts  useSnippets.ts  useVectorDB.ts
desktop/src/lib/: chroma-client.ts  crawler.ts  db.ts  event-handlers.ts  knowledge.ts  migrations.ts  openai.ts  pipeline.ts  processor.ts  utils.ts  worker-service.ts
desktop/src/stores/: proxy-store.ts  snippet-store.ts  task-store.ts  url-store.ts
desktop/src/types/: forms.ts
desktop/src/views/: deep-dive-view.tsx  knowledge-reef-view.tsx
desktop/src/workers/: event-worker.ts
mcp-server/: .env.EXAMPLE  .gitignore  README.md  docker-compose.EXAMPLE.yml  docker-compose.yaml  pyproject.toml  requirements.txt
mcp-server/app/: __init__.py  server.py  setup_collection.py
mcp-server/app/vector_db/: __init__.py  chroma_provider.py  pinecone_provider.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/db/repositories/: mod.rs  proxies.rs  technologies.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/services/: crawler.rs  documentation.rs  documentation_url_service.rs  events.rs  intelligence.rs  mod.rs  version_service.rs
src/components/app-header/: index.tsx
src/components/deep-dive/: crawl-configuration.tsx
src/components/knowledge-reef/: concept-badge.tsx  search-result-card.tsx  snippet-card.tsx
src/components/layout/: main-layout.tsx
src/components/ui/: accordion.tsx  badge.tsx  button.tsx  form.tsx  index.ts  input.tsx  label.tsx  pagination.tsx  scroll-area.tsx  select.tsx  sonner.tsx  switch.tsx  table.tsx  technology-selector-dialog.tsx  tooltip.tsx
src/stores/: snippet-store.ts  technology-store.ts  ui-store.ts
src/types/: events.ts  forms.ts
src/views/: deep-dive-view.tsx  knowledge-reef-view.tsx
(+56 files in other folders)
