[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "chromadb>=0.6.3",
    "mcp[cli]>=1.3.0",
    "numpy>=2.2.3",
    "openai>=1.65.4",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.9.0",
]
