[project]
name = "documentation-snippets-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that provides version-pinned documentation snippets for multiple languages, frameworks, and libraries"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiohttp>=3.11.13",
    "chromadb>=0.6.3",
    "mcp[cli]>=1.3.0",
    "numpy>=2.2.3",
    "openai>=1.65.4",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "semantic-text-splitter>=0.24.1",
    "tiktoken>=0.9.0",
]
