[package]
name = "anchoring"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anchoring_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "^0.26.0"

[target."cfg(target_os = \"windows\")".dependencies]
window-vibrancy = "^0.6"
window-shadows = "^0.2.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "linux-libxdo", "tray-icon", "image-png"] }
# tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
tokio = {version = "1.44.1", features = ["full"] }
once_cell = "1.21.1"
tiktoken-rs = "0.6.0"
text-splitter = { version = "0.24.2", features = ["tiktoken-rs"] }
html2md = "0.2"
url = "2.5.4"

# Database related dependencies
openssl-sys = { version = "0.9.106", features = ["vendored"] } 
pq-sys = { version = "0.7", features = ["bundled"] }
diesel = { version = "2.2.8", features = ["postgres", "chrono", "r2d2", "serde_json", "uuid", "postgres_backend"] }
diesel_migrations = { version = "2.2.0" }
r2d2 = "0.8.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
pgvector = { version = "0.4", features = ["diesel"] }
async-openai = "0.28.0"
headless_chrome = "1.0.17"
uuid = { version = "1.16", features = ["v4", "serde"] }
regex = "1.11.1"
async-trait = "0.1.88"
flume = "0.11.1"
mcp-core = { version = "0.1.42", features = ["sse"] }

# [patch.crates-io]
# plist = { git = "https://github.com/shayhowler/rust-plist", branch = "fix-type-inference" }

[package.metadata.cargo-machete]
ignored = ["openssl-sys", "pq-sys"]


[profile.dev.package."*"]
opt-level = 0

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
